# all_temp_repo

./: README.md  server.json
CLion/alg/: 13460.cpp  1697.cpp  7562.cpp  7576.cpp  CMakeLists.txt  main.cpp
CLion/alon/: CMakeLists.txt  main.cpp
CLion/baekjoon/: CMakeLists.txt  detectnet-camera.cpp
CLion/cleanSW/: AddEmployeeTransaction.cpp  AddEmployeeTransaction.h  AddSalariedEmployee.cpp  AddSalariedEmployee.h  CMakeLists.txt  ChangeClassificationTransaction.cpp  ChangeClassificationTransaction.h  ChangeEmployeeTransaction.cpp  ChangeEmployeeTransaction.h  ChangeHourlyTransaction.cpp  ChangeHourlyTransaction.h  ChangeNameTransaction.cpp  ChangeNameTransaction.h  DeleteEmployeeTransaction.cpp  DeleteEmployeeTransaction.h  PayrollDatabase.cpp  PayrollDatabase.h  ServiceChargeTransaction.cpp  ServiceChargeTransaction.h  TimeCard.h  TimeCardTransaction.cpp  TimeCardTransaction.h  Transaction.h
CLion/multi_stream/multi_stream/: CMakeLists.txt  DisplayImage.cpp  MJPEGWriter.cpp  MJPEGWriter.h  camera.py  json.hpp  main.cpp  mjpeg.py  multi_stream.cpp  server.json  single.py
CLion/temp/: .gitignore  CMakeLists.txt
CLion/xavier_yolox/demo/TensorRT/cpp/: CMakeLists.txt  yolox.cpp
CLion/xavier_yolox/demo/TensorRT/cpp/utils/: MJPEGWriter.cpp  MJPEGWriter.h  draw.cpp  function.hpp  shared-memory.cpp  time.cpp  tracker.cpp  tracker.h  yolo_labels.hpp
CLion/xaviernx/: CMakeLists.txt  CMakePreBuild.sh
GoLand/gRPC_Tour/: server.go
PyCharm/Expert_Python/: pyproject.toml
PyCharm/Expert_Python/my-project/: pyproject.toml
PyCharm/Expert_Python/my-project/my_project/: counter_backend.py  di.py  main.py  my_module.py  redis_backend.py  redis_module.py  view_storage_backend.py
PyCharm/FastAPI/: server.py
PyCharm/QuantumRed_Console_TempCalibration/: Files.spec  IMG_PROCESS_TEMP.py  QuantumRED_MAIN.qrc  QuantumRED_MAIN_TEMP.ui  QuantumRED_MAIN_rc.py  SOC_CMD.py  SOC_COMMAND.ui  SOC_Dialog.qrc  SOC_Dialog_rc.py  SOC_ICD.py  USBCAM_LIST_GET.py  VGA_CONSOLE.ui  main_TEMP.py  main_TEMP.spec  pyscript.spec
PyCharm/all_in_one/: pyproject.toml  test_example.py
PyCharm/all_in_one/tests/: conftest.py  grab_real_store.py  main.py  test_grabstore.py  test_user.py
PyCharm/backend/: main.py
PyCharm/backend_test/: main.py
PyCharm/basic_api/: pyproject.toml
PyCharm/djangoProject/: pyproject.toml
PyCharm/django_study/: .env  pyproject.toml
PyCharm/django_study/books/: apps.py
PyCharm/django_study/books/migrations/: 0001_initial.py
PyCharm/django_study/books/templates/books/: author_detail.html  book_detail.html  publisher_detail.html
PyCharm/django_study/db/: db.sqlite3
PyCharm/django_study/django_study/: settings.py  urls.py  views.py
PyCharm/django_study/polls/: admin.py
PyCharm/django_study/polls/migrations/: 0001_initial.py
PyCharm/django_study/templates/: base.html
PyCharm/django_study/templates/admin/: base_site.html
PyCharm/ernst/: pyproject.toml
PyCharm/fastApiProject/: pyproject.toml
PyCharm/fp_rct/: README.md  docker-compose.yml
PyCharm/gql/: app.py
PyCharm/hello_django/: db.sqlite3  pyproject.toml
PyCharm/hello_django/example/: test_1.py  test_2.py  test_3.py  test_4.py  test_5.py
PyCharm/hello_django/mysite/: settings.py  views.py
PyCharm/hello_django/mysite/templates/: home.html
PyCharm/magnetar/: .env  main.py  model.py  pyproject.toml
PyCharm/magnetar/test/: test_hello.py
PyCharm/planner/: .coverage  example.py  main.py  planner.db  pyproject.toml
PyCharm/planner/auth/: authenticate.py  hash_password.py  jwt_handler.py
PyCharm/planner/database/: connection.py
PyCharm/planner/models/: events.py  users.py
PyCharm/planner/routes/: events.py  users.py
PyCharm/planner/store/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--6997746820588503859.wt  collection-2--6997746820588503859.wt  collection-4--6997746820588503859.wt  collection-7--6997746820588503859.wt  index-1--6997746820588503859.wt  index-3--6997746820588503859.wt  index-5--6997746820588503859.wt  index-6--6997746820588503859.wt  index-8--6997746820588503859.wt  sizeStorer.wt
PyCharm/planner/store/diagnostic.data/: metrics.interim
PyCharm/planner/test/: test_conftest.py  test_login.py
PyCharm/poetry/: .env  database.py  gql.py  main.py  pyproject.toml  time_header_middleware.py
PyCharm/pulsar/: pyproject.toml  test.py
PyCharm/pythonProject/: pyproject.toml
PyCharm/quasar/: main.py
PyCharm/serious_python/: deco.cprof  deco.py  pyproject.toml
PyCharm/sqlAlchemy/: database.py  main.py  (+2 more)
PyCharm/start_fastapi/: Dockerfile  api.py  model.py  pyproject.toml  todo.py
PyCharm/tk/: .coverage  batch.py  main.py  pyproject.toml  quickstart_exe.py
PyCharm/tk/async/: .coverage  alltaskscomplete.py  async_comp.py  async_comp_2.py  async_exam_1.py  async_gen_redis.py  async_iter.py  async_redis.py  async_taskwarning.py  contextlib_exam.py  ds.py  mq_client_listen.py  quick_start.py  shell_signal01.py  shell_signal02b.py  telnet_demo.py  test.py  test2.py  test_3.py
PyCharm/tk/data_structure/: custom_dict.py  frenchdeck2.py  index_sequence.py  osconfeed.py  vector.py
PyCharm/tk/streams/: mq_server.py  msg_proto.py
PyCharm/tk/test/: test_batch.py
PyCharm/utility/: advenced.py  async.py  auto_ping.py  camera.py  get_xml_data.py  get_xml_list.py  hs_static_ping.py  org_uart.py  push_model.py  push_uart.py  pyproject.toml  read_camera.py  show_camera.py  static_ping.py  uart.py  uart_old.py
PyCharm/utility/code_test/: kakao.py
PyCharm/utility/coroutine/: gen.py
PyCharm/utility/generator/: list.json  util.py
PyCharm/utility/model/: info.json  mean.binaryproto  solver.prototxt  train_val.prototxt
PyCharm/utility/multi_nano/py_multi_stream/multi_stream/: camera.py  mjpeg.py  pyproject.toml  single.py
PyCharm/utility/uart/: uart.py
magnetar/backend/: .env  alembic.ini  main.py  pyproject.toml
magnetar/backend/db/: config.py  connect.py  model.py
magnetar/backend/db/schema/: author.py  post.py
magnetar/backend/gql/: gql.py
magnetar/backend/utils/: logger.py
nico-carrot/: next.config.js  package-lock.json  package.json
(+283 files in other folders)
