[tool.poetry]
name = "all_in_one"
version = "0.1.0"
description = ""
authors = ["feus <barca105@nate.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
requests = "^2.28.1"
requests-mock = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
