[tool.poetry]
name = "django-study"
version = "0.1.0"
description = ""
authors = ["feus <barca105@nate.com>"]
readme = "README.md"
packages = [{include = "django_study"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
