[tool.poetry]
name = "hello-django"
version = "0.1.0"
description = ""
authors = ["feus <barca105@nate.com>"]
readme = "README.md"
packages = [{include = "hello_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
