[tool.poetry]
name = "start-fastapi"
version = "0.1.0"
description = ""
authors = ["feus <barca105@nate.com>"]
readme = "README.md"
packages = [{include = "start_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
