[tool.poetry]
name = "tk"
version = "0.1.0"
description = ""
authors = ["feus <barca105@nate.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"
aioredis = "^2.0.1"
aiohttp = "^3.8.5"
cchardet = "^2.1.7"
coverage = "^7.2.7"
pydantic = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
