[tool.poetry]
name = "utility"
version = "0.1.0"
description = ""
authors = ["feus <barca105@nate.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
