[tool.poetry]
name = "multi_stream"
version = "0.1.0"
description = ""
authors = ["feus <barca105@nate.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.5"
sysv-ipc = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
